test/org/midica/testfiles/failing/chord-inside-function.midica
INCLUDE inc/instruments.midica

FUNCTION test
	CHORD testchord c d e
	0 c /4
END
